# aes67-linux-daemon

./: .gitmodules  DEVICES.md  Dockerfile  Dockerfile.daemon_tests  README.md  REDUNDANCY.md  TRANSCRIPTION.md  USB_GADGET.md  azure-pipelines.yml  build.sh  buildfake.sh  cleanup.sh  debian-packages.sh  deploy.sh  run_demo.sh  run_latency_test.sh  run_test.sh  ubuntu-packages.sh
.github/workflows/: daemon-tests.yml  preview.yml  release.yml
daemon/: .clang-format  .gitignore  CMakeLists.txt  README.html  README.md  browser.cpp  browser.hpp  capture.cpp  capture.hpp  config.cpp  config.hpp  daemon.conf  driver_handler.cpp  driver_handler.hpp  driver_interface.hpp  driver_manager.cpp  driver_manager.hpp  error_code.cpp  error_code.hpp  fake_driver_manager.cpp  fake_driver_manager.hpp  http_server.cpp  http_server.hpp  igmp.hpp  interface.cpp  interface.hpp  json.cpp  json.hpp  log.cpp  log.hpp  main.cpp  main.hpp  mdns_client.cpp  mdns_client.hpp  mdns_server.cpp  mdns_server.hpp  netlink.hpp  netlink_client.hpp  rtsp_client.cpp  rtsp_client.hpp  (+14 more)
daemon/scripts/: disable_cpu_scaling.sh  disable_pulseaudio.sh  fetch_streamer_files.sh  ptp_master_start.sh  ptp_slave_start.sh  ptp_status.sh  sink_record.sh  source_play.sh
daemon/tests/: .gitignore  CMakeLists.txt  daemon.conf  daemon_test.cpp
demo/: .gitignore  daemon.conf  status.json
systemd/: aes67-daemon.conf  aes67-daemon.service  daemon.conf  install.sh  mergingRavennaALSA.conf  status.json
test/: .gitignore  Makefile  check.cc  createtest.cc  daemon.conf  latency.cc  status.json
wavplay_am824/: .clang-format  CMakeLists.txt  Makefile.Linux  README.md  am824_framer.h  ubuntu-packages.sh  wavplay_am824.cpp  wavplay_am824.vcxproj
wavplay_am824/lib/Win32/Debug/: portaudio_x86.lib
wavplay_am824/lib/Win32/Release/: portaudio_x86.lib
wavplay_am824/lib/x64/Debug/: portaudio_x64.lib
wavplay_am824/lib/x64/Release/: portaudio_x64.lib
wavplay_am824/test/: create_test_files.sh
webui/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
webui/public/: index.html
webui/src/: App.jsx  Config.js  Config.jsx  ConfigTabs.js  ConfigTabs.jsx  Loader.js  Loader.jsx  PTP.js  PTP.jsx  RemoteSources.js  RemoteSources.jsx  Services.js  SinkEdit.js  SinkEdit.jsx  SinkRemove.js  SinkRemove.jsx  SinkTranscription.jsx  Sinks.js  Sinks.jsx  SourceEdit.js  SourceEdit.jsx  SourceInfo.js  SourceInfo.jsx  SourceRemove.js  SourceRemove.jsx  Sources.js  Sources.jsx  Tab.js  Tab.jsx  Tabs.js  Tabs.jsx  index.js  main.jsx  styles.css
webui/src/components/dashboard/: StatusCard.jsx
webui/src/components/layout/: Layout.jsx  Sidebar.css  Sidebar.jsx
webui/src/components/shared/: Badge.jsx  Modal.css  Modal.jsx  StatusDot.jsx  TimeSeriesChart.css  TimeSeriesChart.jsx
webui/src/hooks/: useApi.js  useMatrix.js  usePolling.js  useTimeSeries.js
webui/src/services/: api.js
webui/src/styles/: theme.css
webui/src/views/Browser/: Browser.css  Browser.jsx
webui/src/views/Dashboard/: Dashboard.css  Dashboard.jsx
webui/src/views/Matrix/: CrosspointNode.jsx  Matrix.css  Matrix.jsx  MatrixGrid.jsx
webui/src/views/Monitoring/: Monitoring.css  Monitoring.jsx
webui/src/views/Settings/: Settings.css  Settings.jsx
webui/src/views/Sinks/: SinkEditModal.jsx  Sinks.css  Sinks.jsx
webui/src/views/Sources/: SourceEditModal.jsx  SourceInfoModal.jsx  Sources.css  Sources.jsx
